--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -512,6 +512,21 @@
       <trans-unit id="0dd390d056411e1709ec97ec51c46d78600e3f7b" datatype="html">
         <source>Current password</source>
       </trans-unit>
+      <trans-unit id="0a9f37733353cccd499455d037edf5730cb48172" datatype="html">
+        <source>The field subject is <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>too long<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/></source>
+      </trans-unit>
+      <trans-unit id="47dff9ac2b836bd64f071f5d1a766899adfc2a0d" datatype="html">
+        <source>The field message is <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>required<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/></source>
+      </trans-unit>
+      <trans-unit id="5380356a5136ee375881be32c09d329f5a3d0264" datatype="html">
+        <source>The field message is <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>too short<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/></source>
+      </trans-unit>
+      <trans-unit id="dd9393b2981e489bb171464e4db69ea5c1fa679d" datatype="html">
+        <source>The field message is <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>too long<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/></source>
+      </trans-unit>
+      <trans-unit id="fdabdf9133bbd11a171f3948a50ccc3e515067be" datatype="html">
+        <source>The field subject is <x id="START_TAG_STRONG" ctype="x-strong" equiv-text="&lt;strong&gt;"/>required<x id="CLOSE_TAG_STRONG" ctype="x-strong" equiv-text="&lt;/strong&gt;"/></source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
