--- a/src/locale/messages.es.xlf
+++ b/src/locale/messages.es.xlf
@@ -707,6 +707,18 @@
         <source>The register has been completed, time to login and start packing!</source>
         <target>El registro ha sido completado, ¡Hora de entrar y comenzar a hacer la maleta!</target>
       </trans-unit>
+      <trans-unit id="8213172001825771483" datatype="html">
+        <source>¡Confirm!</source>
+        <target>¡Confirma!</target>
+      </trans-unit>
+      <trans-unit id="6997873744832482699" datatype="html">
+        <source>Are you sure that you want to suscribe to keep toned of all the updates in mysuitcase.net?</source>
+        <target>¿Estás seguro que quieres suscribirte para estar al corriente de todas las actualizaciones en mysuitcase.net?</target>
+      </trans-unit>
+      <trans-unit id="4980935138474804964" datatype="html">
+        <source>You can relax now, you will be informed of any updates in mysuitcase.net!</source>
+        <target>Ya puedes relajarte, ¡Serás informado de todas las actualizaciones en mysuitcase.net!</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
