--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -706,6 +706,18 @@
         <source>The register has been completed, time to login and start packing!</source>
         <target state="new">The register has been completed, time to login and start packing!</target>
       </trans-unit>
+      <trans-unit id="8213172001825771483" datatype="html">
+        <source>¡Confirm!</source>
+        <target state="new">¡Confirm!</target>
+      </trans-unit>
+      <trans-unit id="6997873744832482699" datatype="html">
+        <source>Are you sure that you want to suscribe to keep toned of all the updates in mysuitcase.net?</source>
+        <target state="new">Are you sure that you want to suscribe to keep toned of all the updates in mysuitcase.net?</target>
+      </trans-unit>
+      <trans-unit id="4980935138474804964" datatype="html">
+        <source>You can relax now, you will be informed of any updates in mysuitcase.net!</source>
+        <target state="new">You can relax now, you will be informed of any updates in mysuitcase.net!</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
