add missing translations

--- a/src/locale/messages.es.xlf
+++ b/src/locale/messages.es.xlf
@@ -328,12 +328,12 @@
         <source>Cleanliness</source>
         <target>Aseo personal</target>
       </trans-unit>
-      <trans-unit id="4e88cfbdd9cc4e4ad314d83d3561f246455868e0" datatype="html">
-        <source>Clothe</source>
+      <trans-unit id="32c8e2a62a234d43ac11beea2df30da5c3681a7c" datatype="html">
+        <source>Clothes</source>
         <target>Ropa</target>
       </trans-unit>
-      <trans-unit id="clothe" datatype="html">
-        <source>Clothe</source>
+      <trans-unit id="clothes" datatype="html">
+        <source>Clothes</source>
         <target>Ropa</target>
       </trans-unit>
       <trans-unit id="7edffe2a2f09a8c2944a475bb5fbd985961ae89c" datatype="html">
