--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -542,6 +542,12 @@
       <trans-unit id="8213172001825771483" datatype="html">
         <source>¡Confirm!</source>
       </trans-unit>
+      <trans-unit id="4a760cd9f9fd31d2010c539cbd5a197fbbfdc936" datatype="html">
+        <source>New item</source>
+      </trans-unit>
+      <trans-unit id="5cb17ba9f6b7b4897192b7f5ae228a9e59703ae8" datatype="html">
+        <source>Select a category or other</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
