fix layout issue in mobile

--- a/src/locale/messages.es.xlf
+++ b/src/locale/messages.es.xlf
@@ -716,13 +716,13 @@
         <source>New item</source>
         <target>Nuevo item</target>
       </trans-unit>
-      <trans-unit id="5cb17ba9f6b7b4897192b7f5ae228a9e59703ae8" datatype="html">
-        <source>Select a category or other</source>
-        <target>Selecciona una categoría o será considerado como &quot;otros&quot;</target>
-      </trans-unit>
       <trans-unit id="4979431550827924582" datatype="html">
         <source>First you need to login or register, it will take less than a minute</source>
         <target>Lo primero de todo... logueate o registrate, te llevará menos de un minuto</target>
+      </trans-unit>
+      <trans-unit id="04201f9d27abd7d6f58a4328ab98063ce1072006" datatype="html">
+        <source>Categories</source>
+        <target>Categorias</target>
       </trans-unit>
     </body>
   </file>
