--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -722,6 +722,50 @@
         <source>Categories</source>
         <target state="new">Categories</target>
       </trans-unit>
+      <trans-unit id="6899344040225872362" datatype="html">
+        <source>Great!</source>
+        <target state="new">Great!</target>
+      </trans-unit>
+      <trans-unit id="4861853581854043794" datatype="html">
+        <source>The subscription has successfully been created</source>
+        <target state="new">The subscription has successfully been created</target>
+      </trans-unit>
+      <trans-unit id="4528690127792822075" datatype="html">
+        <source>The subscription has successfully been sent</source>
+        <target state="new">The subscription has successfully been sent</target>
+      </trans-unit>
+      <trans-unit id="4848068705010228483" datatype="html">
+        <source>Saved!</source>
+        <target state="new">Saved!</target>
+      </trans-unit>
+      <trans-unit id="1874945877667802399" datatype="html">
+        <source>The user has been created, start packing!</source>
+        <target state="new">The user has been created, start packing!</target>
+      </trans-unit>
+      <trans-unit id="6171150143554908350" datatype="html">
+        <source>Updated!</source>
+        <target state="new">Updated!</target>
+      </trans-unit>
+      <trans-unit id="5735773149116667554" datatype="html">
+        <source>The user has been updated</source>
+        <target state="new">The user has been updated</target>
+      </trans-unit>
+      <trans-unit id="1236487209085580750" datatype="html">
+        <source>Removed!</source>
+        <target state="new">Removed!</target>
+      </trans-unit>
+      <trans-unit id="8024150993772970365" datatype="html">
+        <source>One suitcase less..</source>
+        <target state="new">One suitcase less..</target>
+      </trans-unit>
+      <trans-unit id="4923899603787526347" datatype="html">
+        <source>Maximum number of suitcases reached</source>
+        <target state="new">Maximum number of suitcases reached</target>
+      </trans-unit>
+      <trans-unit id="786670510303286576" datatype="html">
+        <source>You have reached the maxium number of suitcases, please remove some before creating a new one</source>
+        <target state="new">You have reached the maxium number of suitcases, please remove some before creating a new one</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
