--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -545,6 +545,39 @@
       <trans-unit id="04201f9d27abd7d6f58a4328ab98063ce1072006" datatype="html">
         <source>Categories</source>
       </trans-unit>
+      <trans-unit id="1236487209085580750" datatype="html">
+        <source>Removed!</source>
+      </trans-unit>
+      <trans-unit id="1874945877667802399" datatype="html">
+        <source>The user has been created, start packing!</source>
+      </trans-unit>
+      <trans-unit id="4528690127792822075" datatype="html">
+        <source>The subscription has successfully been sent</source>
+      </trans-unit>
+      <trans-unit id="4848068705010228483" datatype="html">
+        <source>Saved!</source>
+      </trans-unit>
+      <trans-unit id="4861853581854043794" datatype="html">
+        <source>The subscription has successfully been created</source>
+      </trans-unit>
+      <trans-unit id="4923899603787526347" datatype="html">
+        <source>Maximum number of suitcases reached</source>
+      </trans-unit>
+      <trans-unit id="5735773149116667554" datatype="html">
+        <source>The user has been updated</source>
+      </trans-unit>
+      <trans-unit id="6171150143554908350" datatype="html">
+        <source>Updated!</source>
+      </trans-unit>
+      <trans-unit id="6899344040225872362" datatype="html">
+        <source>Great!</source>
+      </trans-unit>
+      <trans-unit id="786670510303286576" datatype="html">
+        <source>You have reached the maxium number of suitcases, please remove some before creating a new one</source>
+      </trans-unit>
+      <trans-unit id="8024150993772970365" datatype="html">
+        <source>One suitcase less..</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
