--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -227,12 +227,6 @@
       <trans-unit id="mountain" datatype="html">
         <source>Mountain</source>
       </trans-unit>
-      <trans-unit id="b672b311199643fb80c4db973fceb27a336f876e" datatype="html">
-        <source>Sport</source>
-      </trans-unit>
-      <trans-unit id="sport" datatype="html">
-        <source>Sport</source>
-      </trans-unit>
       <trans-unit id="441ba31f53ff0cda8be4cbfa164c00ae36a2116b" datatype="html">
         <source>Pet</source>
       </trans-unit>
@@ -577,6 +571,21 @@
       </trans-unit>
       <trans-unit id="8024150993772970365" datatype="html">
         <source>One suitcase less..</source>
+      </trans-unit>
+      <trans-unit id="2145810472241108816" datatype="html">
+        <source>The user not confirmed yet his email, please check your mailbox even in the junk folder</source>
+      </trans-unit>
+      <trans-unit id="4226526771666691505" datatype="html">
+        <source>The are missing fields that need to be complete, please review the form message</source>
+      </trans-unit>
+      <trans-unit id="4257316494450827013" datatype="html">
+        <source>The user is not authorized to perform this action, please try to log in again</source>
+      </trans-unit>
+      <trans-unit id="cycling" datatype="html">
+        <source>Cycling</source>
+      </trans-unit>
+      <trans-unit id="diving" datatype="html">
+        <source>Diving</source>
       </trans-unit>
     </body>
   </file>
