--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -587,6 +587,9 @@
       <trans-unit id="diving" datatype="html">
         <source>Diving</source>
       </trans-unit>
+      <trans-unit id="4594315457815498149" datatype="html">
+        <source>The message has been sent, soon we will handle the request and provide you a response. Thanks for contacting us</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
